<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:background="@color/white"
        android:layout_marginRight="@dimen/_15sdp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:id="@+id/crossicon"
            android:layout_gravity="end"
            android:src="@drawable/icons_cross"
            android:importantForAccessibility="no" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/howtouse_bg1">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/baseline_share_24" />


            <TextView
                android:maxLines="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/arial"
                android:text="@string/privacy_policy"
                android:id="@+id/privacy"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/howtouse_bg2">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/baseline_settings_24" />


            <TextView
                android:maxLines="3"
                android:id="@+id/txtsettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/arial"
                android:text="@string/settings"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/howtouse_bg3">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/baseline_share_24" />


            <TextView
                android:maxLines="3"
                android:id="@+id/shareapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/arial"
                android:text="@string/share_app"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_40sdp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:layout_marginTop="@dimen/_15sdp"-->
<!--            android:layout_marginBottom="@dimen/_10sdp"-->
<!--            android:background="@drawable/howtouse_bg4">-->
<!--            <ImageView-->
<!--                android:layout_width="25dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginLeft="@dimen/_20sdp"-->
<!--                android:layout_marginRight="@dimen/_20sdp"-->
<!--                android:src="@drawable/baseline_share_24" />-->
<!--            <TextView-->
<!--                android:maxLines="3"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginLeft="@dimen/_10sdp"-->
<!--                android:layout_marginRight="@dimen/_10sdp"-->
<!--                android:fontFamily="@font/arial"-->
<!--                android:text="@string/more_apps"-->
<!--                android:textSize="@dimen/_12ssp"-->
<!--                android:textStyle="bold" />-->
<!--        </LinearLayout>-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>